Readd bus interface to extend the filebrowser context menu

https://bugzilla.gnome.org/show_bug.cgi?id=725424